// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link passes href down to link element 1`] = `
<a
  blacklist={
    Array [
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "css",
    ]
  }
  className="emotion-0 text-blue"
  href="https://github.com"
/>
`;

exports[`Link renders without any props 1`] = `
<a
  blacklist={
    Array [
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "css",
    ]
  }
  className="emotion-0 text-blue"
/>
`;
